--- a/servers-provider/pom.xml
+++ b/servers-provider/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring-boot-web-starter</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.yzk.book</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
