--- a/common/pom.xml
+++ b/common/pom.xml
@@ -36,6 +36,12 @@
             <version>2.11.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.69</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
